// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`execTask > can run pwd-1 command with configured workingDir 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/exec-task
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer pwd-1
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/exec-task/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>pwd-1</BoldDim> <Yellow>STARTED</Yellow>

[log] /ROOT/test/__fixtures__/exec-task

[log]
<Green>✓</Green> Task <Bold>pwd-1</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`execTask > can run pwd-2 command with configured workingDir 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/exec-task
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer pwd-2
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/exec-task/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>pwd-2</BoldDim> <Yellow>STARTED</Yellow>

[log] /ROOT/test/__fixtures__/exec-task

[log]
<Green>✓</Green> Task <Bold>pwd-2</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`execTask > can run pwd-3 command with configured workingDir 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/exec-task
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer pwd-3
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/exec-task/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>pwd-3</BoldDim> <Yellow>STARTED</Yellow>

[log] /ROOT/test/__fixtures__

[log]
<Green>✓</Green> Task <Bold>pwd-3</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`execTask > can run pwd-4 command with configured workingDir 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/exec-task
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer pwd-4
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/exec-task/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>pwd-4</BoldDim> <Yellow>STARTED</Yellow>

[log] /ROOT/test

[log]
<Green>✓</Green> Task <Bold>pwd-4</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`execTask > can run pwd-5 command with configured workingDir 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/exec-task
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer pwd-5
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/exec-task/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>pwd-5</BoldDim> <Yellow>STARTED</Yellow>

[log] /ROOT/test/__fixtures__/main

[log]
<Green>✓</Green> Task <Bold>pwd-5</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;
